--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.6.7",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
